--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,9 @@
 {
-  "env":{
-    "browser": true,
-    "es6": true
-  },
   "extends": ["next/core-web-vitals", "next/typescript"],
-      "rules": {
-          "@typescript-eslint/no-require-imports": "error"
-            }
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
             
   }
   
