--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.12.4",
-    "next": "14.2.14",
+    "next": "^15.0.1",
     "preline": "^2.5.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "^15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
