--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.12.4",
     "next": "^15.0.1",
+    "next-auth": "^4.24.10",
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1"
+    "react-hook-form": "^7.53.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
