--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.12.4",
     "next": "^15.0.1",
-    "next-auth": "^4.24.10",
+    "next-auth": "^5.0.0-beta.25",
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
