--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@heroicons/react": "^2.1.5",
     "firebase": "^10.12.4",
     "next": "^15.0.1",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.24.10",
     "preline": "^2.5.1",
     "react": "^18.3.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.17.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
