--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "firebase": "^10.12.4",
     "next": "^15.0.1",
     "next-auth": "^4.24.10",
