--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@vercel/postgres": "^0.10.0",
+    "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
     "firebase": "^10.12.4",
+    "moment": "^2.30.1",
     "next": "^15.0.1",
     "next-auth": "^4.24.10",
     "preline": "^2.5.1",
