--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase": "^10.12.4",
     "moment": "^2.30.1",
     "next": "^15.0.1",
-    "next-auth": "^4.24.10",
+    "next-auth": "^5.0.0-beta.25",
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
