--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.22.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
@@ -33,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
