--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://nextjsdb_owner:dG0VmLMCFwc3@ep-winter-king-a1n0d73i-pooler.ap-southeast-1.aws.neon.tech/nextjsdb?sslmode=require"
+DATABASE_URL="postgresql://nextjsdb_owner:dG0VmLMCFwc3@ep-green-water-a1p5u8zr.ap-southeast-1.aws.neon.tech/nextjsdb?sslmode=require"
