--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.7.4",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.22.0",
@@ -16,6 +17,7 @@
     "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
     "firebase": "^10.12.4",
+    "firebase-admin": "^12.7.0",
     "moment": "^2.30.1",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
