--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
