--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.7.4",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
@@ -25,8 +26,7 @@
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
-    "zod": "^3.23.8",
-    "prisma": "^5.22.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
@@ -37,7 +37,7 @@
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8",
-    "prisma": "^5.22.0",
+    "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
