--- a/package.json
+++ b/package.json
@@ -11,14 +11,25 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.7.4",
+    "@etchteam/next-pagination": "^3.5.5",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "^6.0.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@vercel/postgres": "^0.10.0",
     "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.7.0",
+    "lucide-react": "^0.465.0",
     "moment": "^2.30.1",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
@@ -26,6 +37,9 @@
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "redis": "^4.7.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -37,7 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8",
-    "prisma": "^6.0.0",
+    "prisma": "^6.0.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
