--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "debounce": "^2.2.0",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.7.0",
     "lucide-react": "^0.465.0",
@@ -40,6 +41,7 @@
     "redis": "^4.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
