--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "redis": "^4.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
