--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "plugins": [{
+      "name": "next"
+    }],
     "paths": {
       "@/*": [
         "./*"
@@ -48,8 +46,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/api/login/route.ts"
-, "app/dokumen/loading.js"  ],
+    "app/api/login/route.ts", "app/dokumen/loading.js"
+  ],
   "exclude": [
     "node_modules"
   ]
