--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.30.1",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
