--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.2.1",
     "redis": "^4.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
