--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@types/bcryptjs": "^2.4.6",
     "@vercel/blob": "^0.27.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -38,6 +41,7 @@
     "firebase-admin": "^12.7.0",
     "lucide-react": "^0.465.0",
     "moment": "^2.30.1",
+    "motion": "^11.18.0",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
@@ -54,6 +58,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.17.3",
     "@types/react": "^18",
