--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "motion": "^11.18.0",
     "next": "^15.0.3",
     "next-auth": "^5.0.0-beta.25",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "preline": "^2.5.1",
     "react": "^18.3.1",
