--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@types/bcryptjs": "^2.4.6",
     "@vercel/blob": "^0.27.0",
     "@vercel/postgres": "^0.10.0",
@@ -38,6 +38,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.7.0",
     "lucide-react": "^0.465.0",
@@ -50,6 +51,7 @@
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
     "redis": "^4.7.0",
