--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
     "redis": "^4.7.0",
+    "swr": "^2.3.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
