--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@etchteam/next-pagination": "^3.5.5",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -23,7 +24,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -71,7 +72,7 @@
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8",
-    "prisma": "^6.0.1",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
