--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
+    "recharts": "^2.15.1",
     "redis": "^4.7.0",
     "swr": "^2.3.2",
     "tailwind-merge": "^2.5.5",
