--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@etchteam/next-pagination": "^3.5.5",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -35,15 +35,12 @@
     "@vercel/postgres": "^0.10.0",
     "@vercel/stega": "^0.1.2",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "firebase": "^10.12.4",
-    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.465.0",
     "moment": "^2.30.1",
     "motion": "^11.18.0",
@@ -51,14 +48,11 @@
     "next-auth": "^5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
-    "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-pdf": "^9.2.1",
     "recharts": "^2.15.1",
-    "redis": "^4.7.0",
     "resend": "^4.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -70,12 +64,13 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.17.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8",
-    "prisma": "^6.5.0",
+    "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
