--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.465.0",
     "moment": "^2.30.1",
     "motion": "^11.18.0",
@@ -63,6 +64,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.17.3",
     "@types/nodemailer": "^6.4.17",
