--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Allow PowerShell scripts
-        run: Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
         shell: pwsh
+        run: |
+          Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
           
       - name: Build Docker image
         run: docker build -t nextjs-app .
