--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Allow PowerShell scripts
-        if: runner.os == 'Windows'
+        run: Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
         shell: pwsh
-        run: |
-          Set-ExecutionPolicy -Scope Process -ExecutionPolicy Bypass
           
       - name: Build Docker image
         run: docker build -t nextjs-app .
