--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "esnext",
       "es6"
     ],
+    "typeRoots": ["./types", "./node_modules/@types"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
