--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "NODE_ENV=.env" >> .env
+          echo "NODE_ENV=production" >> .env
           echo "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" >> .env
           echo "AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}" >> .env
           echo "AUTH_URL=${{ secrets.AUTH_URL }}" >> .env
