--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "NODE_ENV=production" >> .env-local
-          echo "URL=http://localhost:3000" >> .env-local
+          echo "NODE_ENV='production'" >> .env-local
+          echo "URL='http://localhost:3000'" >> .env-local
 
       - name: Build & Recreate container (rolling)
         run: docker compose up -d --build --remove-orphans
