--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,31 +14,31 @@ jobs:
 
       - name: Create .env.local file from secrets
         run: |
-          echo "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" > .env.local
-          echo "AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}" >> .env.local
-          echo "AUTH_URL=${{ secrets.AUTH_URL }}" >> .env.local
-          echo "URL=${{ secrets.URL }}" >> .env.local
-          echo "RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}" >> .env.local
-          echo "AUTH_URL=${{ secrets.AUTH_URL }}" >> .env.local
-          echo "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" >> .env.local
-          echo "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" >> .env.local
-          echo "CLOUDINARY_AUTHORIZATION=${{ secrets.CLOUDINARY_AUTHORIZATION }}" >> .env.local
-          echo "CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}" >> .env.local
-          echo "CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}" >> .env.local
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env.local
-          echo "EMAIL_PASS=${{ secrets.EMAIL_PASS }}" >> .env.local
-          echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> .env.local
-          echo "NEXT_PUBLIC_CLOUDINARY_API_KEY=${{ secrets.NEXT_PUBLIC_CLOUDINARY_API_KEY }}" >> .env.local
-          echo "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}" >> .env.local
-          echo "POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }}" >> .env.local
-          echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" >> .env.local
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env.local
-          echo "POSTGRES_PRISMA_URL=${{ secrets.POSTGRES_PRISMA_URL }}" >> .env.local
-          echo "POSTGRES_URL=${{ secrets.POSTGRES_URL }}" >> .env.local
-          echo "POSTGRES_URL_NON_POOLING=${{ secrets.POSTGRES_URL_NON_POOLING }}" >> .env.local
-          echo "POSTGRES_URL_NO_SSL=${{ secrets.POSTGRES_URL_NO_SSL }}" >> .env.local
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env.local
-          echo "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" >> .env.local    
+          Set-Content -Path ".env.local" -Value "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" -Value "AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "AUTH_URL=${{ secrets.AUTH_URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "URL=${{ secrets.URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "AUTH_URL=${{ secrets.AUTH_URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "CLOUDINARY_AUTHORIZATION=${{ secrets.CLOUDINARY_AUTHORIZATION }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "DATABASE_URL=${{ secrets.DATABASE_URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "EMAIL_PASS=${{ secrets.EMAIL_PASS }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "EMAIL_USER=${{ secrets.EMAIL_USER }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "NEXT_PUBLIC_CLOUDINARY_API_KEY=${{ secrets.NEXT_PUBLIC_CLOUDINARY_API_KEY }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_PRISMA_URL=${{ secrets.POSTGRES_PRISMA_URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_URL=${{ secrets.POSTGRES_URL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_URL_NON_POOLING=${{ secrets.POSTGRES_URL_NON_POOLING }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_URL_NO_SSL=${{ secrets.POSTGRES_URL_NO_SSL }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" -Encoding utf8NoBOM
+          Add-Content -Path ".env.local" "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" -Encoding utf8NoBOM   
 
       - name: Start Docker Compose
         run: docker compose --env-file .env.local up -d --build --remove-orphans
