--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,31 +14,31 @@ jobs:
 
       - name: Create .env.local file from secrets
         run: |
-          Set-Content -Path ".env.local" -Value "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" -Value "AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "AUTH_URL=${{ secrets.AUTH_URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "URL=${{ secrets.URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "AUTH_URL=${{ secrets.AUTH_URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "CLOUDINARY_AUTHORIZATION=${{ secrets.CLOUDINARY_AUTHORIZATION }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "DATABASE_URL=${{ secrets.DATABASE_URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "EMAIL_PASS=${{ secrets.EMAIL_PASS }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "EMAIL_USER=${{ secrets.EMAIL_USER }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "NEXT_PUBLIC_CLOUDINARY_API_KEY=${{ secrets.NEXT_PUBLIC_CLOUDINARY_API_KEY }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_PRISMA_URL=${{ secrets.POSTGRES_PRISMA_URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_URL=${{ secrets.POSTGRES_URL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_URL_NON_POOLING=${{ secrets.POSTGRES_URL_NON_POOLING }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_URL_NO_SSL=${{ secrets.POSTGRES_URL_NO_SSL }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" -Encoding utf8NoBOM
-          Add-Content -Path ".env.local" "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" -Encoding utf8NoBOM   
+          Set-Content -Path ".env" -Value "AUTH_SECRET=${{ secrets.AUTH_SECRET }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value -Value "AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "AUTH_URL=${{ secrets.AUTH_URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "URL=${{ secrets.URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "RESEND_API_KEY=${{ secrets.RESEND_API_KEY }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "AUTH_URL=${{ secrets.AUTH_URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "CLOUDINARY_AUTHORIZATION=${{ secrets.CLOUDINARY_AUTHORIZATION }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "CLOUDINARY_URL=${{ secrets.CLOUDINARY_URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "DATABASE_URL=${{ secrets.DATABASE_URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "EMAIL_PASS=${{ secrets.EMAIL_PASS }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "EMAIL_USER=${{ secrets.EMAIL_USER }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "NEXT_PUBLIC_CLOUDINARY_API_KEY=${{ secrets.NEXT_PUBLIC_CLOUDINARY_API_KEY }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=${{ secrets.NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_DATABASE=${{ secrets.POSTGRES_DATABASE }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_PRISMA_URL=${{ secrets.POSTGRES_PRISMA_URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_URL=${{ secrets.POSTGRES_URL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_URL_NON_POOLING=${{ secrets.POSTGRES_URL_NON_POOLING }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_URL_NO_SSL=${{ secrets.POSTGRES_URL_NO_SSL }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" -Encoding UTF8
+          Add-Content -Path ".env" -Value "SESSION_SECRET=${{ secrets.SESSION_SECRET }}" -Encoding UTF8   
           shell: powershell
           
       - name: Start Docker Compose
