--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,7 @@ jobs:
           POSTGRES_URL_NON_POOLING=${{ secrets.POSTGRES_URL_NON_POOLING }}
           POSTGRES_URL_NO_SSL=${{ secrets.POSTGRES_URL_NO_SSL }}
           POSTGRES_USER=${{ secrets.POSTGRES_USER }}
-          SESSION_SECRET=${{ secrets.SESSION_SECRET }}   
-          "@
+          SESSION_SECRET=${{ secrets.SESSION_SECRET }}"@
          [System.IO.File]::WriteAllText(".env", $envContent, $utf8NoBom)
           
       - name: Start Docker Compose
