--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
          CLOUDINARY_URL: ${{ secrets.CLOUDINARY_URL }}
         run: |
           $utf8NoBom = New-Object System.Text.UTF8Encoding $False
-          $envContent = "CLOUDINARY_URL=$env:CLOUDINARY_URL"
+          $envContent = "DATABASE_URL=$env:DATABASE_URL"
           [System.IO.File]::WriteAllText(".env", $envContent, $utf8NoBom)
       
       - name: Create .env.local file from secrets
