--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Create .env file from secrets
         env:
          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+         RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
         run: |
           $utf8NoBom = New-Object System.Text.UTF8Encoding $False
           $envContent =@"
