--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     env_file:
       - .env
       - .env.local
+    working_dir: /app/public
+    volumes:
+      - /c/Docker
     ports:
       - "3000:3000"
 
