--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       args:
-        - RESEND_API_KEY=${{ secrets.DATABASE_URL }}
+        - RESEND_API_KEY=re_Rq6bLA4K_FxnGakKoT5WLJnS889Wpdo5J
     env_file:
       - .env
       - .env.local
