docker compose add volumes and mont bind

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,10 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - c/nextjs:/app/public
- 
+      - /c/nextjs:/app/public
+      - nextjs:/app/public
 
-
+Volumes:
+  nextjs:
    
 
