--- a/.env.local
+++ b/.env.local
@@ -19,7 +19,7 @@ POSTGRES_DATABASE="verceldb"
 SESSION_SECRET="H3ry4nt0#"
 
 AUTH_SECRET="lFGNRDyoLwMG7tu33Bm3d9yVGtDfDTdXtim5jtL6Km8=" # Added by `npx auth`. Read more: https://cli.authjs.dev
-AUTH_URL="https://cuddly-halibut-rxprx9jr6493wj7v-3000.app.github.dev/api/auth"
+AUTH_URL="http://localhost:3000/api/auth"
 AUTH_TRUST_HOST=true
 
 # Do not expose your Neon credentials to the browser
@@ -46,5 +46,5 @@ RESEND_API_KEY='re_Rq6bLA4K_FxnGakKoT5WLJnS889Wpdo5J'
 EMAIL_USER="jeramy78@ethereal.email"
 EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 
-URL="https://cuddly-halibut-rxprx9jr6493wj7v-3000.app.github.dev"
+URL="http://localhost:3000"
 NODE_ENV=production
