--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@etchteam/next-pagination": "^3.5.5",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^6.16.1",
+    "@prisma/client": "^6.17.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -54,6 +54,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.15.1",
+    "redis": "^5.8.3",
     "resend": "^4.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -73,7 +74,7 @@
     "eslint": "^8",
     "eslint-config-next": "^15.0.1",
     "postcss": "^8",
-    "prisma": "^6.16.2",
+    "prisma": "^6.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
