--- a/.env.local
+++ b/.env.local
@@ -19,7 +19,7 @@ POSTGRES_DATABASE="verceldb"
 SESSION_SECRET="H3ry4nt0#"
 
 AUTH_SECRET="lFGNRDyoLwMG7tu33Bm3d9yVGtDfDTdXtim5jtL6Km8=" # Added by `npx auth`. Read more: https://cli.authjs.dev
-AUTH_URL="http://localhost:3000/api/auth"
+AUTH_URL="http://localhost:3000"
 AUTH_TRUST_HOST=true
 
 # Do not expose your Neon credentials to the browser
