--- a/.env.local
+++ b/.env.local
@@ -49,4 +49,4 @@ EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 URL="http://localhost:3000"
 NODE_ENV="development"
 
-API_URL="http://localhost:8081"
+API_URL="https://go.heryheryanto.my.id"
