validasi simpan data dan jwt get token

--- a/.env.local
+++ b/.env.local
@@ -47,6 +47,6 @@ EMAIL_USER="jeramy78@ethereal.email"
 EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 
 URL="http://localhost:3000"
-NODE_ENV="development"
 
-API_URL="https://app.heryheryanto.my.id"
+
+API_URL="http://localhost:8081"
