remove pagination on user menu

--- a/.env.local
+++ b/.env.local
@@ -46,8 +46,8 @@ RESEND_API_KEY='re_Rq6bLA4K_FxnGakKoT5WLJnS889Wpdo5J'
 EMAIL_USER="jeramy78@ethereal.email"
 EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 
-URL="http://localhost:3000"
+URL="https://automatic-eureka-9xjqxvpqg4vhwpj-3000.app.github.dev"
 
 
-API_URL="http://localhost:8081"
-# API_URL="https://go.heryheryanto.my.id"
+# API_URL="http://localhost:8081"
+API_URL="https://go.heryheryanto.my.id"
