update eksport validasi

--- a/.env.local
+++ b/.env.local
@@ -49,5 +49,5 @@ EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 URL="https://automatic-eureka-9xjqxvpqg4vhwpj-3000.app.github.dev"
 
 
-# API_URL="http://localhost:8081"
-API_URL="https://go.heryheryanto.my.id"
+API_URL="http://localhost:8081"
+# API_URL="https://go.heryheryanto.my.id"
