Role Menu Acttion

--- a/.env.local
+++ b/.env.local
@@ -24,7 +24,7 @@ AUTH_TRUST_HOST=true
 
 # Do not expose your Neon credentials to the browser
 
-DATABASE_URL="postgresql://nextjsdb_owner:dG0VmLMCFwc3@ep-green-water-a1p5u8zr.ap-southeast-1.aws.neon.tech/nextjsdb?sslmode=require"
+DATABASE_URL="postgresql://nextjsdb_owner:dG0VmLMCFwc3@ep-green-water-a1p5u8zr-pooler.ap-southeast-1.aws.neon.tech/nextjsdb?sslmode=require&channel_binding=require"
 
 BLOB_READ_WRITE_TOKEN="vercel_blob_rw_XjMmJIzAW0muIipQ_W1C4g5rWS7DmVhYGHc8JKeb0GJSA0h"
 
@@ -49,5 +49,5 @@ EMAIL_PASS="Twy2tVgn6xTzKHnnBP"
 URL="https://automatic-eureka-9xjqxvpqg4vhwpj-3000.app.github.dev"
 
 
-API_URL="http://localhost:8081"
-# API_URL="https://go.heryheryanto.my.id"
+# API_URL="http://localhost:8081"
+API_URL="https://go.heryheryanto.my.id"
